tests/errors/E037.zen
int main() {
    let x := 5;
    return x.len;
}